--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "eventemitter2": "^6.4.9",
+    "isomorphic-ws": "^5.0.0",
     "lodash-es": "^4.17.21",
+    "socket.io-client": "^4.6.1",
     "tsparticles": "^2.9.3",
     "vue": "^2.6.14",
     "vue-happy-scroll": "^2.1.1",
     "vue-router": "^3.5.1",
     "vue2-particles": "^2.9.3",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
