--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   },
   "dependencies": {
     "@types/lodash-es": "^4.17.7",
+    "@types/plotly.js-dist-min": "^2.3.1",
     "autobind-decorator": "^2.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "eventemitter2": "^6.4.9",
+    "exceljs": "^4.3.0",
     "isomorphic-ws": "^5.0.0",
     "lodash-es": "^4.17.21",
+    "plotly.js-dist-min": "^2.24.3",
+    "process": "^0.11.10",
+    "readable-web-to-node-stream": "^3.0.2",
     "socket.io-client": "^4.6.1",
     "tsparticles": "^2.9.3",
     "vue": "^2.6.14",
