--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/lodash-es": "^4.17.7",
     "@types/plotly.js-dist-min": "^2.3.1",
     "autobind-decorator": "^2.4.0",
+    "compression-webpack-plugin": "^10.0.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "eventemitter2": "^6.4.9",
