--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-router": "^3.5.1",
     "vue2-particles": "^2.9.3",
     "vuex": "^3.6.2",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
